# nn_decompositions

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  activation_store.py  base.py  clt.py  clt_activation_store.py  config.py  encoders.py  logs.py  main.py  pyproject.toml  random_data_transcoder.py  requirements.txt  sae.py  setup_env.sh  test_clt.py  training.py  transcoder.py  transcoder_canonical_pile.py
analysis/: collect_activations.py  collect_spd_activations.py  feature_dashboard.py
experiments/: autointerp_pile.py  clt_canonical_pile.py  diagnose_tail.py  faithfulness_analysis.py  faithfulness_results.json  intruder_dashboard.py  intruder_detection.py  intruder_results.json  pareto_comparison.md  pareto_comparison.py  pareto_pile.py  pareto_pile_natural.py  spd_gpt2.py  spd_gpt2_config.yaml  transcoder_canonical_pile.py  transcoder_ss.py
experiments/exp_001_train_transcoder_pile/: transcoder_canonical_pile.py
experiments/exp_002_train_transcoder_ss/: transcoder_ss.py
experiments/exp_003_train_clt_pile/: clt_canonical_pile.py
experiments/exp_005_pareto_gpt2/: pareto_comparison.md  pareto_comparison.py
experiments/exp_006_pareto_pile/: pareto_pile.py
experiments/exp_007_pareto_pile_all_layers/: pareto_pile_all_layers.py
experiments/exp_008_interp_pile/: autointerp_pile.py  intruder_dashboard.py  intruder_detection.py
experiments/exp_008_interp_pile/output/: autointerp_results.json
experiments/exp_009_diagnose_tail/: diagnose_tail.py
experiments/exp_010_train_transcoder_pile_sweep/: transcoder_sweep_pile.py
experiments/exp_011_pareto_trained_all_layers/: pareto_trained_all_layers.py
experiments/exp_012_model_table/: model_table.py
experiments/exp_013_steering_eval/: steering_eval.py
experiments/exp_014_ablation_eval/: ablation_eval.py
experiments/exp_015_steering_specificity/: steering_specificity.py
experiments/exp_015_train_transcoder_pile_sweep_e2e/: transcoder_sweep_pile_e2e.py
experiments/exp_016_multi_feature_steering/: multi_feature_steering.py
experiments/exp_016_train_clt_pile_e2e_cascading/: clt_e2e_cascading_pile.py
experiments/exp_017_negative_steering/: negative_steering.py
nn_decompositions/: __init__.py  activation_store.py  clt.py  config.py  logs.py  sae.py  training.py  transcoder.py
