[project]
name = "nn-decompositions"
version = "0.1.0"
description = "Neural network decomposition with SAEs and Transcoders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformer-lens>=1.8",
    "wandb>=0.16",
    "datasets>=2.14",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
analysis = [
    "pandas",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
