[project]
name = "nn-decompositions"
version = "0.1.0"
description = "Neural network decomposition with SAEs and Transcoders"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformer-lens>=1.8",
    "wandb>=0.16",
    "datasets>=2.14",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
analysis = [
    "pandas",
    "matplotlib",
]
simplestories = [
    "simple_stories_train @ git+https://github.com/goodfire-ai/simple_stories_train.git@16f574d274849c90fe15e5c4df231f3885e44a7d",
]
spd = [
    "spd @ git+https://github.com/goodfire-ai/spd.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["nn_decompositions"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
